<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:ignore="HardcodedText"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="0dp">

        <TextView
            android:id="@+id/displayView"
            android:layout_width="408dp"
            android:layout_height="78dp"
            android:lines="1"
            android:maxLines="1"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNoFunction"
            android:text="MC"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="MR"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="MS"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="M+"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="M-"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonOperation"
            android:text="DEL"
            android:onClick="backSpaceAction"/>
        <Button
            style="@style/buttonOperation"
            android:text="CE"
            android:onClick="allClearAction"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="C"/>
        <Button
            style="@style/buttonOperation"
            android:text="±" />
        <Button
            style="@style/buttonOperation"
            android:text="√" />
    </LinearLayout>
    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="7"/>
        <Button
            style="@style/buttonNumber"
            android:text="8"/>
        <Button
            style="@style/buttonNumber"
            android:text="9"/>
        <Button
            style="@style/buttonOperation"
            android:text="/"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="%" />
    </LinearLayout>
    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="4"/>
        <Button
            style="@style/buttonNumber"
            android:text="5"/>
        <Button
            style="@style/buttonNumber"
            android:text="6"/>
        <Button
            style="@style/buttonOperation"
            android:text="*"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="1/x" />
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="1" />

        <Button
            style="@style/buttonNumber"
            android:text="2" />

        <Button
            style="@style/buttonNumber"
            android:text="3" />

        <Button
            style="@style/buttonOperation"
            android:text="-" />

        <Button
            style="@style/buttonOperation"
            android:onClick="equalsAction"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="0"
            android:layout_weight="2"/>
        <Button
            style="@style/buttonNumber"
            android:text="."/>
        <Button
            style="@style/buttonOperation"
            android:text="+"/>
        <Button
            style="@style/buttonNoFunction"
            android:text="="
            android:gravity="center_horizontal"
            android:background="@color/dark_lblue"
            android:onClick="equalsAction"/>

    </LinearLayout>


</LinearLayout>